<resources>
    <string name="app_name">TipCalculator</string>
    <string name="_20">20%</string>
    <string name="check_amount">Check amount:</string>
    <string name="party_size">Party size:</string>
    <string name="compute_tip">COMPUTE TIP</string>
    <string name="tip">Tip:</string>
    <string name="_25">25%</string>
    <string name="total">Total:</string>
    <string name="enter_total_amount">Enter total amount</string>
    <string name="_15">15%</string>
    <string name="enter_party_string_party_size">Enter party @string/party_size</string>
</resources>
