<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a10ngawang.tipcalculator.edu.example.a10ngawang.tipcalculator.TipCalculatorActivity">

    <TextView
        android:id="@+id/checkAmount"
        android:layout_width="104dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/check_amount"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/checkAmountValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="209dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:hint="@string/enter_total_amount"
        android:inputType="number"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkAmount"
        app:layout_constraintTop_toTopOf="@+id/checkAmount"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/partySize"
        android:layout_width="104dp"
        android:layout_height="22dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/party_size"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/partySizeValue"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkAmount" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="209dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="Enter party size"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/partySize"
        app:layout_constraintTop_toTopOf="@+id/partySize" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/compute_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partySizeValue" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/tip"
        app:layout_constraintEnd_toStartOf="@+id/tip15percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute" />

    <TextView
        android:id="@+id/tip15percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_15"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTipValue"
        app:layout_constraintTop_toTopOf="@+id/tips"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tip20percent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCompute"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tip20percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_20"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTipValue"
        app:layout_constraintTop_toTopOf="@+id/tip15percent"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType=""
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tip25percent"
        app:layout_constraintTop_toTopOf="@+id/fifteenPercentTipValue"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/tip25percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_25"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTipValue"
        app:layout_constraintTop_toTopOf="@+id/tip20percent"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twentyPercentTipValue"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/totalTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/total15percent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tips"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/total15percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_15"
        app:layout_constraintEnd_toStartOf="@+id/fifteenPercentTotalValue"
        app:layout_constraintTop_toTopOf="@+id/totalTip" />

    <EditText
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/total20percent"
        app:layout_constraintTop_toBottomOf="@+id/fifteenPercentTipValue"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/total20percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_20"
        app:layout_constraintEnd_toStartOf="@+id/twentyPercentTotalValue"
        app:layout_constraintTop_toTopOf="@+id/fifteenPercentTotalValue" />

    <EditText
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType=""
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/total25percent"
        app:layout_constraintTop_toTopOf="@+id/fifteenPercentTotalValue"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/total25percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_25"
        app:layout_constraintEnd_toStartOf="@+id/twentyfivePercentTotalValue"
        app:layout_constraintTop_toTopOf="@+id/twentyPercentTotalValue" />

    <EditText
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="63dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twentyPercentTotalValue"
        android:layout_marginRight="8dp" />


</android.support.constraint.ConstraintLayout>
